fix(category): Fix headline right spacing on categories (#165)

--- a/src/components/structural/page-head/page-head.module.css
+++ b/src/components/structural/page-head/page-head.module.css
@@ -39,6 +39,7 @@
 
     @media (--bp-lg) {
       @mixin span 9, 12, lg;
+      padding-right: calc(var(--grid-gutter-lg) * 2);
     }
   }
 
